--- a/views/layout.jade
+++ b/views/layout.jade
@@ -25,18 +25,90 @@ html(xmlns='http://www.w3.org/1999/xhtml')
         ul#topnav
           li
             a(href='index') Home
-          li.active
+          li
             a(href='tedtalkslist') List of TED Talks
           li
             a(href='tedtalks') Add New
           li.last
             a(href='gallery') Category Gallery
 
-
-    
-
     title TED TALKS
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    block content
->>>>>>> c27efae854d0b98044954b3d1b7bfcd11505a772
+
+  block content
+
+  .wrapper
+      #footer.clear
+        .footbox
+          h2
+            | About Us 
+            img(src='images/logo.png', height='50px', width='180 px', a='', href='index.html')
+          p
+            | TED is a nonprofit devoted to spreading ideas, usually in the form of short, powerful talks (18 minutes or less). TED began in 1984 as a conference where Technology, Entertainment and Design converged, and today covers almost all topics
+          p
+            | from science to business to global issues  in more than 100 languages. Meanwhile, independently run TEDx events help share ideas in communities around the world.
+        .footbox
+          h2 Programs & Initiatives 
+          ul
+            li
+              a(href='https://www.ted.com/about/programs-initiatives/tedx-program') TEDx
+            li
+              a(href='https://www.ted.com/about/programs-initiatives/ted-prize') TED Prize
+            li
+              a(href='https://www.ted.com/about/programs-initiatives/ted-fellows-program') TED Fellows 
+            li
+              a(href='https://www.ted.com/about/programs-initiatives/ted-ed') TED Ed
+            li
+              a(href='https://www.ted.com/about/programs-initiatives/ted-translators') TED Translators
+            li
+              a(href='https://www.ted.com/about/programs-initiatives/ted-books') TED Booksc
+            li.last
+              a(href='https://www.ted.com/about/programs-initiatives/ted-institute') TED Institutes
+        .footbox
+          h2 Ways to get TED
+          ul
+            li
+              a(href='http://www.npr.org/programs/ted-radio-hour/') TED Radio Hour on NPR
+            li.last
+              a(href='https://www.ted.com/about/programs-initiatives/ted-talks/ways-to-get-ted-talks') More ways to get TED
+        .footbox.last
+          h2 Keep in Touch
+          ul
+            li
+              a(href='https://www.facebook.com/TED') Check out our Facebook page
+            li
+              a(href='https://twitter.com/tedtalks') Get the latest Tweets
+            li
+              a(href='https://www.pinterest.com/tednews/') Pinterest
+            li
+              a(href='https://www.instagram.com/ted/') View our Instagram profile
+          h2 Contact Us
+          ul
+            li
+              strong.title Tel:
+              br
+              |           212.346.9333
+            li
+              strong.title Fax:
+              br
+              |           718.744.2142
+            li
+              strong.title Email:
+              br
+              | registration@ted.com
+    // #######################################################################################################
+    .wrapper
+      #copyright.clear
+        p.fl_left
+          | Copyright © 2016 - All Rights Reserved - 
+          a(href='#') TOP TED TALKS
+        p.fl_right
+          | Created by :
+          a(target='_blank', href='http://coen3463-m1t8.herokuapp.com/') Jocelle L. Tanqui-on & Jobelle H. San Juan
+
+  Scripts
+    script(src='https://code.jquery.com/jquery-2.1.1.min.js')
+    script(src='javascripts/materialize.js')
+    script(src='javascripts/init.js')
+
