--- a/views/list.jade
+++ b/views/list.jade
@@ -10,7 +10,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
     title TOP TED TALKS| List of TED Talks
     meta(http-equiv='Content-Type', content='text/html; charset=iso-8859-1')
     link(href='https://fonts.googleapis.com/icon?family=Material+Icons', rel='stylesheet')
-    link(href='stylesheets/materialize.css', type='text/css', rel='stylesheet', media='screen,projection')
+    link(href='/stylesheets/materialize.css', type='text/css', rel='stylesheet', media='screen,projection')
     link(rel='stylesheet', href='/stylesheets/layout.css', type='text/css')
   body#top
     .wrapper.col1
@@ -28,7 +28,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
         ul#topnav
           li
             a(href='/index') Home
-          li.active
+          li
             a(href='/tedtalkslist') List of TED Talks
           li
             a(href='/tedtalks') Add New
@@ -41,26 +41,49 @@ html(xmlns='http://www.w3.org/1999/xhtml')
         #content
           h1 List of TED Talks
           #demo
-            h1 TED Talks | Top Lists
+            h1 Details
               .video-container
                   iframe(width='853', height='480', src=list.embedded, frameborder='0', allowfullscreen='')
-              p Title: #{list.title}
-              p Uploader Name: #{list.uploader_name}
-              p Youtube Page Link: #{list.youtube_page}
-              P Youtube Link: #{list.youtube_link}
-              p Description: #{list.description}
-              p Publication Date: #{list.pub_date}
-              p Category: #{list.category}
-              p Number of Views: #{list.views}
-              p Number of Likes: #{list.likes}
+
+              table.highlight.responsive-table
+                thead
+                  tr
+                    th(style = 'width: 20%; font-size:90%')
+                    th(style = 'width: 80%; font-size:90%') 
+                tbody(style = 'font-size: 70%')
+                  tr
+                    td Title: 
+                    td #{list.title}
+                  tr
+                    td Uploader Name: 
+                    td #{list.uploader_name}
+                  tr
+                    td Youtube Page Link: 
+                    td #{list.youtube_page}
+                  tr
+                    td Youtube Link: 
+                    td #{list.youtube_link}
+                  tr
+                    td Description: 
+                    td #{list.description}
+                  tr
+                    td Publication Date: 
+                    td #{list.pub_date}
+                  tr
+                    td Category: 
+                    td #{list.category}
+                  tr 
+                    td Number of Views: 
+                    td #{list.views}
+                  tr
+                    td Number of Likes: 
+                    td #{list.likes}
               br
               center
-                a(href= '/tedtalks/' + list._id + '/edit')
-                  | Update
+                a.btn.waves-effect.waves-light(href='/tedtalks/' + list._id + '/edit') Edit
               br
               center
-                a(href='/tedtalks/' + list._id + '/delete')
-                  | Delete
+                a.btn.waves-effect.waves-light(href='/tedtalks/' + list._id + '/delete') Delete
             br
             br
             #comments
@@ -134,3 +157,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
         p.fl_right
           | Created by :
           a(target='_blank', href='http://coen3463-m1t8.herokuapp.com/') Jocelle L. Tanqui-on & Jobelle H. San Juan
+  Scripts
+    script(src='https://code.jquery.com/jquery-2.1.1.min.js')
+    script(src='javascripts/materialize.js')
+    script(src='javascripts/init.js')
