--- a/views/tedtalkslist.jade
+++ b/views/tedtalkslist.jade
@@ -1,37 +1,6 @@
-doctype transitional
-//
-  Template Name: PhotoFolio
-  Author: <a href="http://www.os-templates.com/">OS Templates</a>
-  Author URI: http://www.os-templates.com/
-  Licence: Free to use under our free template licence terms
-  Licence URI: http://www.os-templates.com/template-terms
-html(xmlns='http://www.w3.org/1999/xhtml')
-  head
-    title TOP TED TALKS| List of TED Talks
-    meta(http-equiv='Content-Type', content='text/html; charset=iso-8859-1')
-    link(rel='stylesheet', href='/stylesheets/layout.css', type='text/css')
-  body#top
-    .wrapper.col1
-      #header.clear
-        .fl_left
-          h1
-            img(src='./images/logo.png', height='50px', width='180 px', a='', href='index')
-            p(style='font-family:arial;') Ideas Worth Spreading
+extends layout
 
-          
-    // #######################################################################################################
-    .wrapper.col1
-      #topbar.clear
-        ul#topnav
-          li
-            a(href='index') Home
-          li.active
-            a(href='tedtalkslist') List of TED Talks
-          li
-            a(href='tedtalks') Add New
-          li.last
-            a(href='gallery') Category Gallery
-    // #######################################################################################################
+block content
     .wrapper.col2
       #container.clear
         // #######################################################################################################
@@ -49,13 +18,23 @@ html(xmlns='http://www.w3.org/1999/xhtml')
           br
           br
           br
-          h2 Lists
           #demo
             h1 TED Talks | Top Lists
-              ul
-                for list in lists
-                  li
-                    a(href='/list/' + list._id, style='font-size:20px') #{list.title} | #{list.uploader_name}, | #{list.views}
+              table.highlight.bordered.responsive-table
+                thead
+                  tr
+                    th(style = 'width: 50%; font-size:90%') Title
+                    th(style = 'width: 30%; font-size:90%') Uploader Name
+                    th(style = 'width: 20%; font-size:90%') Number of Views
+        
+                tbody(style = 'font-size: 70%')
+                  each list, i in lists
+                    tr
+                      td
+                        a.red-text(href='/list/' + list._id) #{list.title}
+                      td #{list.uploader_name}
+                      td #{list.views}
+                      
             br
             br
             #comments
@@ -93,71 +72,4 @@ html(xmlns='http://www.w3.org/1999/xhtml')
             
       // #######################################################################################################
     // #######################################################################################################
-    .wrapper
-      #footer.clear
-        .footbox
-          h2
-            | About Us 
-            img(src='./images/logo.png', height='50px', width='180 px', a='', href='index.html')
-          p
-            | TED is a nonprofit devoted to spreading ideas, usually in the form of short, powerful talks (18 minutes or less). TED began in 1984 as a conference where Technology, Entertainment and Design converged, and today covers almost all topics
-          p
-            | from science to business to global issues  in more than 100 languages. Meanwhile, independently run TEDx events help share ideas in communities around the world.
-        .footbox
-          h2 Programs & Initiatives 
-          ul
-            li
-              a(href='https://www.ted.com/about/programs-initiatives/tedx-program') TEDx
-            li
-              a(href='https://www.ted.com/about/programs-initiatives/ted-prize') TED Prize
-            li
-              a(href='https://www.ted.com/about/programs-initiatives/ted-fellows-program') TED Fellows 
-            li
-              a(href='https://www.ted.com/about/programs-initiatives/ted-ed') TED Ed
-            li
-              a(href='https://www.ted.com/about/programs-initiatives/ted-translators') TED Translators
-            li
-              a(href='https://www.ted.com/about/programs-initiatives/ted-books') TED Booksc
-            li.last
-              a(href='https://www.ted.com/about/programs-initiatives/ted-institute') TED Institutes
-        .footbox
-          h2 Ways to get TED
-          ul
-            li
-              a(href='http://www.npr.org/programs/ted-radio-hour/') TED Radio Hour on NPR
-            li.last
-              a(href='https://www.ted.com/about/programs-initiatives/ted-talks/ways-to-get-ted-talks') More ways to get TED
-        .footbox.last
-          h2 Keep in Touch
-          ul
-            li
-              a(href='https://www.facebook.com/TED') Check out our Facebook page
-            li
-              a(href='https://twitter.com/tedtalks') Get the latest Tweets
-            li
-              a(href='https://www.pinterest.com/tednews/') Pinterest
-            li
-              a(href='https://www.instagram.com/ted/') View our Instagram profile
-          h2 Contact Us
-          ul
-            li
-              strong.title Tel:
-              br
-              |           212.346.9333
-            li
-              strong.title Fax:
-              br
-              |           718.744.2142
-            li
-              strong.title Email:
-              br
-              | registration@ted.com
-    // #######################################################################################################
-    .wrapper
-      #copyright.clear
-        p.fl_left
-          | Copyright © 2016 - All Rights Reserved - 
-          a(href='#') TOP TED TALKS
-        p.fl_right
-          | Created by :
-          a(target='_blank', href='http://coen3463-m1t8.herokuapp.com/') Jocelle L. Tanqui-on & Jobelle H. San Juan
+
