--- a/views/update.jade
+++ b/views/update.jade
@@ -86,7 +86,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
                   input.form-control(type='text', name='embedded', value=list.embedded)
                   br
                 button.btn.waves-effect.waves-light.red(type='submit')
-                  | Submit 
+                  | Update
                   i.material-icons.right
       // #######################################################################################################
     // #######################################################################################################
