--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -34,8 +34,9 @@ a:hover {
   margin: 20px auto;
   border-radius: 4px;
   box-shadow: 0 4px 10px 4px rgba(19, 35, 47, 0.3);
-  margin-left: 800px;
-  margin-top: 100px;
+  width: 100% !important;
+  margin-right:150px;
+  margin-top:120px;
 }
 
 .tab-group {
@@ -93,6 +94,7 @@ label {
   -webkit-backface-visibility: hidden;
   pointer-events: none;
   font-size: 15px;
+  font-weight: 700;
 }
 label .req {
   margin: 2px;
@@ -100,10 +102,11 @@ label .req {
 }
 
 label.active {
-  -webkit-transform: translateY(50px);
-          transform: translateY(50px);
+  -webkit-transform: translateY(40px);
+          transform: translateY(40px);
   left: 1px;
   font-size: 12px;
+  font-weight: 600;
 }
 label.active .req {
   opacity: 0;
@@ -160,8 +163,8 @@ textarea {
   border: 0;
   outline: none;
   border-radius: 0;
-  padding: 15px 0;
-  font-size: 1.5rem;
+  padding: 5px 0;
+  font-size: 1rem;
   font-weight: 600;
   text-transform: uppercase;
   letter-spacing: .1em;
