--- a/views/layout.jade
+++ b/views/layout.jade
@@ -29,8 +29,11 @@ html(xmlns='http://www.w3.org/1999/xhtml')
             a(href='tedtalkslist') List of TED Talks
           li
             a(href='tedtalks') Add New
-          li.last
+          li
             a(href='gallery') Category Gallery
+          li.last
+            form(action='/logout', method='post')
+              button.button.button-block(type='submit') Log Out
 
     title TED TALKS
     link(rel='stylesheet', href='/stylesheets/style.css')
