--- a/views/index.jade
+++ b/views/index.jade
@@ -56,8 +56,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
           li
             a(href='gallery') Category Gallery
           li.last
-            form(action='/logout', method='post')
-              button.button.button-block(type='submit') Log Out
+            a(href='/users/logout') Logout
     center
       img(src='./images/banner2.jpg')
     br
