--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,6 +12,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
     link(href='https://fonts.googleapis.com/icon?family=Material+Icons', rel='stylesheet')
     link(href='stylesheets/materialize.css', type='text/css', rel='stylesheet', media='screen,projection')
     link(rel='stylesheet', href='/stylesheets/layout.css', type='text/css')
+    link(rel='stylesheet', href='/stylesheets/login.css', type='text/css')
   body#top
     .wrapper.col1
       #header.clear
@@ -32,8 +33,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
           li
             a(href='gallery') Category Gallery
           li.last
-            form(action='/logout', method='post')
-              button.button.button-block(type='submit') Log Out
+            a(href='/users/logout') Logout
 
     title TED TALKS
     link(rel='stylesheet', href='/stylesheets/style.css')
@@ -46,7 +46,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
         .footbox
           h2
             | About Us 
-            img(src='images/logo.png', height='50px', width='180 px', a='', href='index.html')
+            img(src='/images/logo.png', height='50px', width='180 px', a='', href='index.html')
           p
             | TED is a nonprofit devoted to spreading ideas, usually in the form of short, powerful talks (18 minutes or less). TED began in 1984 as a conference where Technology, Entertainment and Design converged, and today covers almost all topics
           p
@@ -112,6 +112,6 @@ html(xmlns='http://www.w3.org/1999/xhtml')
 
   Scripts
     script(src='https://code.jquery.com/jquery-2.1.1.min.js')
-    script(src='javascripts/materialize.js')
-    script(src='javascripts/init.js')
+    script(src='/javascripts/materialize.js')
+    script(src='/javascripts/init.js')
 
