--- a/views/tedtalkslist.jade
+++ b/views/tedtalkslist.jade
@@ -23,12 +23,12 @@ block content
               table.highlight.bordered.responsive-table
                 thead
                   tr
-                    th(style = 'width: 50%; font-size:90%') Title
-                    th(style = 'width: 30%; font-size:90%') Uploader Name
-                    th(style = 'width: 20%; font-size:90%') Number of Views
+                    th(style='width: 50%; font-size:90%') Title
+                    th(style='width: 30%; font-size:90%') Uploader Name
+                    th(style='width: 20%; font-size:90%') Number of Views
         
-                tbody(style = 'font-size: 70%')
-                  each list, i in lists
+                tbody(style='font-size: 70%')
+                  for list in lists
                     tr
                       td
                         a.red-text(href='/list/' + list._id) #{list.title}
