--- a/views/update.jade
+++ b/views/update.jade
@@ -31,8 +31,10 @@ html(xmlns='http://www.w3.org/1999/xhtml')
             a(href='/tedtalkslist') List of TED Talks
           li
             a(href='/tedtalks') Add New
-          li.last
+          li
             a(href='/gallery') Category Gallery
+          li.last
+            a(href='/users/logout') Logout
     // #######################################################################################################
     .wrapper.col2
       #container.clear
@@ -86,7 +88,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
                   input.form-control(type='text', name='embedded', value=list.embedded)
                   br
                 button.btn.waves-effect.waves-light.red(type='submit')
-                  | Update
+                  | Update 
                   i.material-icons.right
       // #######################################################################################################
     // #######################################################################################################
