--- a/views/gallery.jade
+++ b/views/gallery.jade
@@ -57,7 +57,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
               a(href='tedtalks') Add New
             li.active
               a(href='gallery') Category Gallery
-            li.active.last
+            li.last
               a(href='/users/logout') Logout
       // #######################################################################################################
       .wrapper.col2
