--- a/views/tedtalks.jade
+++ b/views/tedtalks.jade
@@ -69,23 +69,23 @@ html(xmlns='http://www.w3.org/1999/xhtml')
                   br
                 .form-group.col.s12.m12.l6
                   label Description
-                  input.form-control(type='text', name='description', placeholder='Sir Ken Robinson makes an entertaining and profoundly moving case for creating an education system that nurtures (rather than undermines) creativity.', required='', aria-required='true')
+                  input.form-control(type='text', name='description', placeholder='Sir Ken Robinson makes an entertaining and profoundly moving case for creating an education system that nurtures (rather than undermines) creativity.')
                   br
                 .form-group.col.s12.m12.l6
                   label Published Date
-                  input.form-control(type='text', name='pub_date', placeholder='Jan 6, 2007', required='', aria-required='true')
+                  input.form-control(type='text', name='pub_date', placeholder='Jan 6, 2007')
                   br
                 .form-group.col.s12.m12.l6
                   label Category
-                  input.form-control(type='text', name='category', placeholder='Education', required='', aria-required='true')
+                  input.form-control(type='text', name='category', placeholder='Education')
                   br
                 .form-group.col.s12.m12.l6
                   label Number of Views
-                  input.form-control(type='text', name='views', placeholder='11,576,537 views', required='', aria-required='true')
+                  input.form-control(type='text', name='views', placeholder='11,576,537 views')
                   br
                 .form-group.col.s12.m12.l6
                   label Number of Likes
-                  input.form-control(type='text', name='likes', placeholder='109,462 likes', required='', aria-required='true')
+                  input.form-control(type='text', name='likes', placeholder='109,462 likes')
                   br
                 .form-group.col.s12.m12.l6
                   label Embedded Link 
