--- a/views/gallery.jade
+++ b/views/gallery.jade
@@ -55,9 +55,9 @@ html(xmlns='http://www.w3.org/1999/xhtml')
               a(href='tedtalkslist') List of ted talks
             li
               a(href='tedtalks') Add New
-            li
+            li.active
               a(href='gallery') Category Gallery
-            li.last
+            li.active.last
               a(href='/users/logout') Logout
       // #######################################################################################################
       .wrapper.col2
