--- a/views/gallery.jade
+++ b/views/gallery.jade
@@ -57,8 +57,8 @@ html(xmlns='http://www.w3.org/1999/xhtml')
               a(href='tedtalks') Add New
             li.active
               a(href='gallery') Category Gallery
-            li.active.last
-              a(href='/users/logout') Logout
+            li.last
+              a(href='/users/logout', style='padding-left:420px') Logout
       // #######################################################################################################
       .wrapper.col2
         #container.clear
