--- a/views/tedtalks.jade
+++ b/views/tedtalks.jade
@@ -33,7 +33,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
           li
             a(href='/gallery') Category Gallery
           li.last
-            a(href='/users/logout') Logout
+            a(href='/users/logout', style='padding-left:420px') Logout
     // #######################################################################################################
     .wrapper.col2
       #container.clear
