--- a/views/index.jade
+++ b/views/index.jade
@@ -56,7 +56,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
           li
             a(href='gallery') Category Gallery
           li.last
-            a(href='/users/logout') Logout
+            a(href='/users/logout', style='padding-left:420px') Logout
     center
       img(src='./images/banner2.jpg')
     br
