add sort and count

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -32,7 +32,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
           li
             a(href='gallery') Category Gallery
           li.last
-            a(href='/users/logout', style='padding-left:420px') Logout
+            a(href='/auth/logout', style='padding-left:420px') Logout
 
     title TED TALKS
     link(rel='stylesheet', href='/stylesheets/style.css')
@@ -113,4 +113,5 @@ html(xmlns='http://www.w3.org/1999/xhtml')
     script(src='https://code.jquery.com/jquery-2.1.1.min.js')
     script(src='/javascripts/materialize.js')
     script(src='/javascripts/init.js')
+    script(src='/javascripts/script.js')
 
