--- a/views/tedtalkslist.jade
+++ b/views/tedtalkslist.jade
@@ -19,24 +19,21 @@ block content
           br
           br
           #demo
+        
+            h1#totalCount
+            br
+            br
             h1 TED Talks | Top Lists
               table.highlight.bordered.responsive-table
                 thead
                   tr
-                    th(style='width: 50%; font-size:90%') Title
-                    th(style='width: 30%; font-size:90%') Uploader Name
+                    th(style='width: 45%; font-size:90%') Title
+                    th(style='width: 20%; font-size:90%') Uploader Name
                     th(style='width: 20%; font-size:90%') Number of Views
-        
-                tbody(style='font-size: 70%')
-                  for list in lists
-                    tr
-                      td
-                        a.red-text(href='/list/' + list._id) #{list.title}
-                      td #{list.uploader_name}
-                      td #{list.views}
-                      
-            br
-            br
+                    th(style='width: 20%; font-size:90%') Date Created
+                    
+                tbody#entry
+
             #comments
               h2 Comments
               ul.commentlist
